namespaces/live.cloud-platform.service.justice.gov.uk/hmpps-person-on-probation-user-service-dev/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: "hmpps-person-on-probation-user-service-dev"
  labels:
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "development"
    pod-security.kubernetes.io/enforce: restricted
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "HMPPS"
    cloud-platform.justice.gov.uk/slack-channel: "hmpps-resettlement-passport"
    cloud-platform.justice.gov.uk/application: "Provide access to person on probation user details"
    cloud-platform.justice.gov.uk/owner: "Resettlement Passport: thomas.halson@digital.justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/hmpps-person-on-probation-user-service"
    cloud-platform.justice.gov.uk/team-name: "resettlement-passport"
    cloud-platform.justice.gov.uk/review-after: ""
